Fix css of buttons and appearance of app

--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -28,26 +28,18 @@ a:active {
 }
 
 .command-button {
-  color: $white;
+  color: $black;
   font-size: 1.5rem;
   margin-right: 1rem;
   margin-left: 0rem;
-  background-color: $pink;
+  background-color: $white;
   float: left;
   height: 3.1rem;
   width: 10.5rem;
-}
-
-.save-button {
-  background-color: $green;
 }
 
 #cross-gift-link{
  width: 9.0rem;
  height: 3.0rem;
  font-size: 1.3rem;
-}
-
-.cancel-button {
-  background-color: $white;
 }
