--- a/app/views/cgs/index.html.erb
+++ b/app/views/cgs/index.html.erb
@@ -11,7 +11,7 @@
         <td> <%= cg.guest_names %> </td>
         <td> <%= cg.item_name %> </td>
         <td><%= link_to fa_icon("trash", text: 'Delete'), cg_path(cg), method: :delete,
-                class: "btn generic-button command-button cancel-button hvr-sweep-to-right", id: 'delete-cg-link' %></td>
+                class: "btn generic-button command-button hvr-sweep-to-right", id: 'delete-cg-link' %></td>
       </tr>
     <%end%>
   </table>
