--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -6,10 +6,10 @@
     <%= f.text_field :email, placeholder: 'Enter email', class: 'form-control required' %>
 
     <div class='level-header'>
-      <%= button_tag(type: 'submit', class: "btn generic-button command-button save-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
+      <%= button_tag(type: 'submit', class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
       <% end %>      
-      <%= link_to fa_icon("undo", text: 'Cancel'), guests_path, class: 'btn generic-button command-button cancel-button hvr-sweep-to-right' %>
+      <%= link_to fa_icon("undo", text: 'Cancel'), guests_path, class: 'btn generic-button command-button hvr-sweep-to-right' %>
     </div>
   <% end %>
 </div>
