--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -2,7 +2,7 @@
   <h2 align='center'> Rsvps </h2>
   <% @rsvps = locals[:guests] if @rsvps.nil? %> 
   <div class= 'pull-right'>
-    <%= link_to fa_icon("plus", text: 'Add RSVP'), new_rsvp_path, class: "btn generic-button command-button save-button hvr-sweep-to-right", id: 'new-rsvp-link' if current_user && user_signed_in? %>
+    <%= link_to fa_icon("plus", text: 'Add RSVP'), new_rsvp_path, class: "btn generic-button command-button hvr-sweep-to-right", id: 'new-rsvp-link' if current_user && user_signed_in? %>
   </div>
   <table class = 'table table-striped'>
     <thead>
@@ -23,7 +23,7 @@
         <% if current_user && user_signed_in? %> 
           <td><%= link_to fa_icon("pencil", text:'Edit'), edit_rsvp_path(id: rsvp.id), class: "btn generic-button command-button hvr-sweep-to-right", id: 'edit-rsvp-link' %>
           <%= link_to fa_icon("trash", text: 'Delete'), rsvp_path(rsvp), method: :delete,
-                class: "btn generic-button command-button cancel-button hvr-sweep-to-right", id: 'delete-rsvp-link' %></td>
+                class: "btn generic-button command-button hvr-sweep-to-right", id: 'delete-rsvp-link' %></td>
         <%end%>
       </tr>
     <%end%>
