--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,18 +10,21 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapsable">
       <ul class="nav navbar-nav foo pull-right" id="menu">
-        <li><%= link_to 'HOME', welcome_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'OUR STORY', our_story_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'PEOPLE', people_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'THE WEDDING', the_details_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'ACCOMODATION', accomodation_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'GIFTS', gifts_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'RSVP', new_rsvp_path, class: 'hvr-sweep-to-right' if !current_user %></li>
-        <li><%= link_to 'CONTACT', contact_us_path, class: 'hvr-sweep-to-right' %></li>
         <% if current_user %>
-          <li><%= link_to 'RSVP', rsvps_path, class: 'hvr-sweep-to-right' %></li>
-          <li><%= link_to 'GUESTS', guests_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'CLAIMED GIFTS', cgs_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Rsvp', rsvps_path, class: 'hvr-sweep-to-right' %></li>
+          <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Gifts', gifts_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Claimed Gifts', cgs_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'hvr-sweep-to-right' %></li>
+        <% else %>
+          <li><%= link_to 'Home', welcome_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Our Story', our_story_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'People', people_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'The Wedding', the_details_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Accomodation', accomodation_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Gifts', gifts_path, class: 'hvr-sweep-to-right'%></li>
+          <li><%= link_to 'Rsvp', new_rsvp_path, class: 'hvr-sweep-to-right' if !current_user %></li>
+          <li><%= link_to 'Contact', contact_us_path, class: 'hvr-sweep-to-right' %></li>
         <% end %>
       </ul>
    </div>
