Fix alt for bridesmaids and groomsmen

--- a/app/views/pages/_bridesmaids.html.erb
+++ b/app/views/pages/_bridesmaids.html.erb
@@ -4,7 +4,7 @@
     <div class="hr"></div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/anita.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/anita.jpg" alt="Eva Hudson", width='100%', height='180'>
+        <img src="../images/anita.jpg" alt="Anita Jacob", width='100%', height='180'>
         <div class="description">
           <h3>Anita Jacob</h3>
         </div>
@@ -12,7 +12,7 @@
     </div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/gen.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/gen.jpg" alt="Eva Hudson", width='100%', height='180'>
+        <img src="../images/gen.jpg" alt="Genevieve Walker", width='100%', height='180'>
         <div class="description">
           <h3>Genevieve Walker</h3>
         </div>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/risha.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/risha.jpg" alt="Eva Hudson", width='100%', height='180'>
+        <img src="../images/risha.jpg" alt="Risha Bhagat", width='100%', height='180'>
         <div class="description">
           <h3>Risha Bhagat</h3>
         </div>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/sarah.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/sarah.jpg" alt="Eva Hudson", width='100%', height='180'>
+        <img src="../images/sarah.jpg" alt="Sarah Yeo", width='100%', height='180'>
         <div class="description">
           <h3>Sarah Yeo</h3>
         </div>
@@ -36,7 +36,7 @@
     </div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/ida.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/ida.jpg" alt="Eva Hudson", width='100%', height='180'>
+        <img src="../images/ida.jpg" alt="Ida Chirayath", width='100%', height='180'>
         <div class="description">
           <h3>Ida Chirayath</h3>
         </div>
@@ -44,7 +44,7 @@
     </div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/dawn.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/dawn.jpg" alt="Eva Hudson", width='100%', height='180'>
+        <img src="../images/dawn.jpg" alt="Dawn Richardson", width='100%', height='180'>
         <div class="description">
           <h3>Dawn Richardson</h3>
         </div>
