--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -36,7 +36,7 @@
     </div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/connor.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-        <img src="../images/connor.jpg" alt="Louis Tuohy", width='100%', height='180'>
+        <img src="../images/connor.jpg" alt="Connor Scott", width='100%', height='180'>
         <div class="description">
           <h3>Connor Scott </h3>
         </div>
