--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -3,7 +3,7 @@
   src: url('Ave.ttf') format('truetype')
 }
 
-@font-face { /** so cool */
+@font-face {
   font-family: 'JWS';
   src: url('JWS.ttf') format('truetype')
 }
