--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 }
 
 body {
-  font-family: 'DS', serif; 
+  font-family: 'Avenir', serif;
   font-size: 16px;
   color: $black;
 }
@@ -65,10 +65,6 @@ p {
   color: $black;
 }
 
-.party-group li {
-  margin: 1% 0;
-}
-
 .row {
   margin-left: -15px;
   margin-right: -15px;
@@ -84,15 +80,6 @@ p {
   max-height: 100%;
   margin: auto;
   overflow: auto;
-}
-
-.my-header {
-  font-size: 40px;
-  font: bold 24px/45px Helvetica, Sans-Serif;
-  color: $white;
-  padding: 10px;
-  background: $black;
-  margin: 0;
 }
 
 .event-item {
