Move best man and maid of honour to wedding party page and rename it. Shuffle names

--- a/app/views/pages/_wedding_party.html.erb
+++ b/app/views/pages/_wedding_party.html.erb
@@ -1,8 +1,26 @@
-<div class = 'container'>  
+<div class = 'container'>
   <div class="row">
     <h2 align='center'>Wedding Party</h2>
     <div class="hr"></div>
     <div class="row">
+      <div class="col-md-3 col-sm-2">
+        <a href="../images/anita.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+          <img src="../images/anita.jpg" alt="Anita Jacob", width='100%', height='180'>
+          <div class="description">
+            <h3>Anita Jacob </h3>
+            <span>Maid of Honour</span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-2">
+        <a href="../images/louis.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+          <img src="../images/louis.jpg" alt="Louis Tuohy", width='100%', height='180'>
+          <div class="description">
+            <h3>Louis Tuohy </h3>
+            <span>Best Man</span>
+          </div>
+        </a>
+      </div>
       <div class="col-md-3 col-sm-2">
         <a href="../images/nina.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
           <img src="../images/nina.jpg" alt="Nina Jacob", width='100%', height='180'>
