--- a/app/views/pages/people.html.erb
+++ b/app/views/pages/people.html.erb
@@ -2,13 +2,13 @@
   <div class= 'main-people'>
     <%= render 'pages/main_people' %>
   </div>
+  <div class='wedding-party'>
+    <%= render 'pages/wedding_party' %>
+  </div>
   <div class= 'bridesmaids'>
     <%= render 'pages/bridesmaids' %>
   </div>
   <div class='groomsmen'>
     <%= render 'pages/groomsmen' %>
-  </div>
-  <div class='junior-team'>
-    <%= render 'pages/juniors_involved' %>
   </div>
 </div>
