--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
   font-family: 'Ave';
-  src: url('Ave.ttf') format('truetype')
+  src: font-url('Ave.ttf') format('truetype')
 }
 
 @font-face {
   font-family: 'JWS';
-  src: url('JWS.ttf') format('truetype')
+  src: font-url('JWS.ttf') format('truetype')
 }
 
 @font-face {
   font-family: 'AR';
-  src: url('AR.otf') format('opentype')
+  src: font-url('AR.otf') format('opentype')
 }
 
 @font-face {
   font-family: 'Avenir';
-  src: url('Avenir.otf') format('opentype')
+  src: font-url('Avenir.otf') format('opentype')
 }
