--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
+      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
     <%= csrf_meta_tags %>
   </head>
   <body class = "body-style">
