Add countdown to wedding using flipclock plugin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+      <link rel="stylesheet" href="assets/flipclock.css">
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
+      <script src="assets/flipclock.min.js"></script>
     <%= csrf_meta_tags %>
   </head>
   <body class = "body-style">
