--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -1,6 +1,9 @@
 <div class='container'>
   <h2 align='center'> The Wedding </h2>
   <div class="hr"></div>
+  <div class='countdown-clock'>
+    <div class="your-clock"></div>
+  </div>
   <div class='row'>
     <div class="col-md-4 col-sm-4 col-xs-12">
       <div class="event-item">
