--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
   <div class='our-image'>
-    <%= image_tag("addtext_island.jpg", :alt => "us", class:'us-image', width: 2800, height: 1500) %>
+    <%= image_tag("us.jpg", :alt => "us", class:'us-image', width: 2800, height: 1500) %>
   </div>
 </div>
