--- a/app/views/pages/_bridesmaids.html.erb
+++ b/app/views/pages/_bridesmaids.html.erb
@@ -3,14 +3,6 @@
     <h2 align='center'>Bridesmaids</h2>
     <div class="hr"></div>
     <div class="col-md-3 col-sm-2">
-      <a href="../images/dawn.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/dawn.jpg" alt="Dawn Richardson", width='100%', height='180'>
-        <div class="description">
-          <h3>Dawn Richardson</h3>
-        </div>
-      </a>
-    </div>
-    <div class="col-md-3 col-sm-2">
       <a href="../images/gen.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
         <img src="../images/gen.jpg" alt="Genevieve Walker", width='100%', height='180'>
         <div class="description">
@@ -23,6 +15,14 @@
         <img src="../images/ida.jpg" alt="Ida Chirayath", width='100%', height='180'>
         <div class="description">
           <h3>Ida Chirayath</h3>
+        </div>
+      </a>
+    </div>
+    <div class="col-md-3 col-sm-2">
+      <a href="../images/kels.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
+        <img src="../images/kels.jpg" alt="Kelsey Morrison", width='100%', height='180'>
+        <div class="description">
+          <h3>Kelsey Morrison</h3>
         </div>
       </a>
     </div>
