--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -18,14 +18,14 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3 col-sm-2">
-      <a href="../images/fraser.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-        <img src="../images/fraser.jpg" alt="Fraser Berry", width='100%', height='180'>
-        <div class="description">
-          <h3>Fraser Berry</h3>
-        </div>
-      </a>
-    </div>
+      <div class="col-md-3 col-sm-2">
+        <a href="../images/louis.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+          <img src="../images/louis.jpg" alt="Louis Tuohy", width='100%', height='180'>
+          <div class="description">
+            <h3>Louis Tuohy </h3>
+          </div>
+        </a>
+      </div>
     <div class="col-md-3 col-sm-2">
       <a href="../images/matt.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
         <img src="../images/matt.jpg" alt="Matt van der Welden", width='100%', height='180'>
