--- a/app/views/pages/_wedding_party.html.erb
+++ b/app/views/pages/_wedding_party.html.erb
@@ -13,11 +13,11 @@
         </a>
       </div>
       <div class="col-md-3 col-sm-2">
-        <a href="../images/louis.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/louis.jpg" alt="Louis Tuohy", width='100%', height='180'>
+        <a href="../images/fraser.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+          <img src="../images/fraser.jpg" alt="Fraser Berry", width='100%', height='180'>
           <div class="description">
-            <h3>Louis Tuohy </h3>
-            <span>Best Man</span>
+            <h3>Fraser Berry</h3>
+              <span>Best Man</span>
           </div>
         </a>
       </div>
