--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -8,7 +8,7 @@
     <div class="col-md-4 col-sm-4 col-xs-12">
       <div class="event-item">
         <h2 class='subheading'>Ceremony</h2>
-        <span>15:30 - 16:30</span>
+        <span>14:00 - 15:00</span>
         <p> Sts Peter and Paul Church</p>
         <p> 60 Knights Road </p>
         <p> Lower Hutt </p>
@@ -20,8 +20,8 @@
     <div class="col-md-4 col-sm-4 col-xs-12">
       <div class="event-item">
         <h2 class='subheading'>Formal Reception</h2>
-        <span>18:30 - 22.00</span>
-        <p> Hutt Golf Club</p>
+        <span>18:00 - 22.00</span>
+        <p> Boulcott Farm</p>
         <p> 30 Military Road </p>
         <p> Lower Hutt </p>
         <p> Wellington </p>
@@ -33,7 +33,7 @@
       <div class="event-item">
         <h2 class='subheading'>Party</h2>
         <span>22:00 - 12.00</span>
-        <p> Hutt Golf Club</p>
+        <p> Boulcott Farm</p>
         <p> 30 Military Road </p>
         <p> Lower Hutt </p>
         <p> Wellington </p>
