--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -19,10 +19,10 @@
       </a>
     </div>
       <div class="col-md-3 col-sm-2">
-        <a href="../images/louis.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/louis.jpg" alt="Louis Tuohy", width='100%', height='180'>
+        <a href="../images/farshid.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+          <img src="../images/farshid.jpg" alt="Farshid Shokoohi", width='100%', height='180'>
           <div class="description">
-            <h3>Louis Tuohy </h3>
+            <h3>Farshid Shokoohi </h3>
           </div>
         </a>
       </div>
