--- a/app/views/pages/_bridesmaids.html.erb
+++ b/app/views/pages/_bridesmaids.html.erb
@@ -2,41 +2,41 @@
   <div class="row">
     <h2 align='center'>Bridesmaids</h2>
     <div class="hr"></div>
-    <div class="col-md-3 col-sm-2">
+    <div class="col-md-4 col-sm-3">
       <a href="../images/gen.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/gen.jpg" alt="Genevieve Walker", width='100%', height='180'>
+        <img src="../images/gen.jpg" alt="Genevieve Walker", width='320', height='250'>
         <div class="description">
           <h3>Genevieve Walker</h3>
         </div>
       </a>
     </div>
-    <div class="col-md-3 col-sm-2">
+    <div class="col-md-4 col-sm-3">
       <a href="../images/ida.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/ida.jpg" alt="Ida Chirayath", width='100%', height='180'>
+        <img src="../images/ida.jpg" alt="Ida Chirayath", width='320', height='250'>
         <div class="description">
           <h3>Ida Chirayath</h3>
         </div>
       </a>
     </div>
-    <div class="col-md-3 col-sm-2">
+    <div class="col-md-4 col-sm-3">
       <a href="../images/kels.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/kels.jpg" alt="Kelsey Morrison", width='100%', height='180'>
+        <img src="../images/kels.jpg" alt="Kelsey Morrison", width='320', height='250'>
         <div class="description">
           <h3>Kelsey Morrison</h3>
         </div>
       </a>
     </div>
-    <div class="col-md-3 col-sm-2">
+    <div class="col-md-4 col-sm-3">
       <a href="../images/risha.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/risha.jpg" alt="Risha Bhagat", width='100%', height='180'>
+        <img src="../images/risha.jpg" alt="Risha Bhagat", width='320', height='250'>
         <div class="description">
           <h3>Risha Bhagat</h3>
         </div>
       </a>
     </div>
-    <div class="col-md-3 col-sm-2">
+    <div class="col-md-4 col-sm-3">
       <a href="../images/sarah.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-        <img src="../images/sarah.jpg" alt="Sarah Yeo", width='100%', height='180'>
+        <img src="../images/sarah.jpg" alt="Sarah Yeo", width='320', height='250'>
         <div class="description">
           <h3>Sarah Yeo</h3>
         </div>
