Update accomodation details

--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -4,35 +4,48 @@
   <div class='row'>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("hotel1.jpg", :alt => "hotel1") %>
+        <%= image_tag("angus-inn.jpg", :alt => "angus-inn", height: '250', width: '358') %>
         <div class="description">
-          <h2 class='subheading'>Hotel Vegas</h2>
+          <h2 class='subheading'>Angus Inn</h2>
           <span class="rating">
             <i class="fa fa-star rating"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
         </div>
+        <p> Corner of Cornwall Streets & Waterloo Road </p>
+        <p> Lower Hutt </p>
+        <p> +64 4 560 1100 </p>
+        <p> accommodation@angusinn.co.nz </p>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("hotel2.jpg", :alt => "hotel2") %>
+        <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: '358', height: '250') %>
         <div class="description">
-          <h2 class='subheading'>Hotel Paris</h2>
+          <h2 class='subheading'>Boulcott Lodge</h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
         </div>
+        <p> 615 High Street, Boulcott </p>
+        <p> Lower Hutt </p>
+        <p> 0800 782 928 25 </p>
+        <p> +64 4 58 615 58 </p>
+        <p> stay@boulcottlodge.co.nz </p>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("hotel3.jpg", :alt => "hotel3") %>
+        <%= image_tag("green-gables.jpg", :alt => "green-gables", width: '358', height: '250') %>
         <div class="description">
-          <h2 class='subheading'>Hotel Garden</h2>
+          <h2 class='subheading'>Green Gables Motel </h2>
           <span class="rating">
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
         </div>
+        <p> 560 High Street </p>
+        <p> Lower Hutt </p>
+        <p> +64 4 569 3596 </p>
+        <p> stay@greengablesmotel.co.nz </p>
       </div>
     </div>
   </div>
