--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -6,7 +6,7 @@
       <div class="hotel-item">
         <%= image_tag("angus-inn.jpg", :alt => "angus-inn", height: '250', width: '358') %>
         <div class="description">
-          <h2 class='subheading'>Angus Inn</h2>
+          <h2 class='subheading'><%= link_to 'Angus Inn', 'http://www.angusinn.co.nz/accommodation', class: 'subheading' %></h2>
           <span class="rating">
             <i class="fa fa-star rating"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
@@ -21,7 +21,7 @@
       <div class="hotel-item">
         <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: '358', height: '250') %>
         <div class="description">
-          <h2 class='subheading'>Boulcott Lodge</h2>
+          <h2 class='subheading'><%= link_to 'Boulcott Lodge Inn', 'http://www.boulcottlodge.co.nz/accommodation.html', class: 'subheading' %></h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
@@ -37,7 +37,7 @@
       <div class="hotel-item">
         <%= image_tag("green-gables.jpg", :alt => "green-gables", width: '358', height: '250') %>
         <div class="description">
-          <h2 class='subheading'>Green Gables Motel </h2>
+          <h2 class='subheading'><%= link_to 'Green Gables Motel', 'http://greengablesmotel.co.nz/rooms', class: 'subheading' %></h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
