Fix spelling of matts surname

--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -30,7 +30,7 @@
       <a href="../images/matt.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
         <img src="../images/matt.jpg" alt="Matt van der Welden", width='320', height='250'>
         <div class="description">
-          <h3>Matt Van der Welden </h3>
+          <h3>Matt Van der Velden </h3>
         </div>
       </a>
     </div>
