Update the details page

--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -14,7 +14,7 @@
         <p> Lower Hutt </p>
         <p> Wellington </p>
         <p> New Zealand </p>      
-        <%= image_tag("church.jpg", :alt => "church") %>
+        <%= image_tag("church.jpg", :alt => "church", height: '250', width: '338') %>
       </div>
     </div>
     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -26,7 +26,7 @@
         <p> Lower Hutt </p>
         <p> Wellington </p>
         <p> New Zealand </p>      
-        <%= image_tag("reception.jpg", :alt => "reception") %>
+        <%= image_tag("reception.jpg", :alt => "reception", height: '250', width: '338') %>
       </div>
     </div>
     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -38,7 +38,7 @@
         <p> Lower Hutt </p>
         <p> Wellington </p>
         <p> New Zealand </p>      
-        <%= image_tag("dance.jpg", :alt => "dance") %>
+        <%= image_tag("dance.jpg", :alt => "dance", height: '250', width: '338') %>
       </div>
     </div>
   </div>
