Change our story page into a timeline

--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -1,24 +1,47 @@
 <div class='container'>
-  <h3 class=" our-story arc-text" aria-label="Our&nbsp;Story" style="position: relative; visibility: visible; height: 70.0311px;">
-    <span class="char1" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.406977em; transform: rotate(-7.47968deg); transform-origin: center 19.7674em 0px;">T</span>
-    <span class="char2" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.360465em; transform: rotate(-5.04697deg); transform-origin: center 19.7674em 0px;">h</span>
-    <span class="char3" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.302326em; transform: rotate(-2.90473deg); transform-origin: center 19.7674em 0px;">e</span>
-    <span class="char4" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.116279em; transform: rotate(-1.52498deg); transform-origin: center 19.7674em 0px;">&nbsp;</span>
-    <span class="char5" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.27907em; transform: rotate(-0.217855deg); transform-origin: center 19.7674em 0px;">S</span>
-    <span class="char6" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.232558em; transform: rotate(1.41606deg); transform-origin: center 19.7674em 0px;">t</span>
-    <span class="char7" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.406977em; transform: rotate(3.44937deg); transform-origin: center 19.7674em 0px;">o</span>
-    <span class="char8" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.302326em; transform: rotate(5.73684deg); transform-origin: center 19.7674em 0px;">r</span>
-    <span class="char9" aria-hidden="true" style="position: absolute; left: 50%; margin-left: -0.313953em; transform: rotate(7.73384deg); transform-origin: center 19.7674em 0px;">y</span>
-  </h3> 
-  <div class="hr"></div>
-  <div class='row'>
-    <div class='col-sm-6 story-col'>
-      <p> Iain and Tania met in March 2010 in their first ENGR101 Lab after being put in the same group. Since then their friendship has flourished over the years and they became best buddies at university. Funnily enough they both ended up scoring internships and permanent roles in Datacom. Fast forward to 6 November 2013, Iain decided to express his feelings for Tania the night before the SWEN433 exam. Be rest assured though, they both got A+ for the exam the following day. </p>
-    </div>
-    <div class='col-sm-6 story-col'>
-      <p> On 28 November 2015, Iain decided it was time and asked Tania out. Iain suggested their first date to be at One Red Dog so Tania waited there for him. Unfortunately Iain got a bit muddled up with restaurant names and meant Big Dogs on Blair. They were both sitting at different restaurants waiting for each other until Iain told Tania he meant the date to be at Big Dogs. Following this they went and enjoyed the views from Oriental Bay. As a couple they enjoy watching TV shows, having nerdy time together, exploring the outdoors and going out for a nice dinner and movie.</p> 
-
-      <p> Iain decided to pop the question on April 27 2016 after going to all you can eat chicken wings with mates in Oriental Bay. Following this they had a formal betrothal ceremony and engagement party at Royal Port Nicholson Yacht Club in Oriental Bay on June 25 2016. They are now counting down till their big day and can't wait to see you all there.</p>
-    </div>
+  <div class="container">
+    <h2 align='center'> Our Story </h2>
+    <div class="hr"></div>
   </div>
+   <section class="timeline">
+    <ul>
+      <li>
+        <div>
+          <time> March 2010 </time> Iain and Tania met at ENGR101 Labs. They were put in the same group. </div>
+      </li>
+      <li>
+        <div>
+          <time> June 2010 </time> Iain and Tania started working on assignments. </div>
+      </li>
+      <li>
+        <div>
+          <time> 6 November 2013 </time> Iain told Tania that he liked her. This was the night before the SWEN433 exam. </div>
+      </li>
+      <li>
+        <div>
+          <time>28 November 2013</time> Iain asked Tania out. He set the first date to be at One Red Dog so Tania waited there for him. Unfortunately Iain got muddled up with restaurant names and meant Big Dogs on Blair. They were both sitting at different restaurants waiting for each other until Iain told Tania he meant the date to be at Big Dogs.
+        </div>
+      </li>
+      <li>
+        <div>
+          <time> 11 December 2014 </time> Iain and Tania graduated from university.
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>27 April 2016</time> Iain popped the question to Tania in Oriental Bay after all you can eat chicken wings.
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>25 June 2016</time> Iain and Tania's Formal Betrothal Ceremony at Sts Peters and Pauls Church, Lower Hutt. This was followed by the engagement party at Royal Port Nicholson Yacht Club, Oriental Bay.
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>25 February 2017</time> Iain and Tania are getting married in Lower Hutt.
+        </div>
+      </li>
+    </ul>
+  </section>
  </div>
