--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -7,39 +7,43 @@
     <ul>
       <li>
         <div>
-          <time> March 2010 </time> Iain and Tania met at ENGR101 Labs. They were put in the same group. </div>
+          <time> March 2010 </time>
+          <p> Iain and Tania met at ENGR101 Labs and were assigned to the same lab group. </p></div>
       </li>
       <li>
         <div>
-          <time> June 2010 </time> Iain and Tania started working on assignments. </div>
-      </li>
-      <li>
-        <div>
-          <time> 6 November 2013 </time> Iain told Tania that he liked her. This was the night before the SWEN433 exam. </div>
-      </li>
-      <li>
-        <div>
-          <time>28 November 2013</time> Iain asked Tania out. He set the first date to be at One Red Dog so Tania waited there for him. Unfortunately Iain got muddled up with restaurant names and meant Big Dogs on Blair. They were both sitting at different restaurants waiting for each other until Iain told Tania he meant the date to be at Big Dogs.
+          <time> 6 November 2013 </time> 
+          <p>Iain told Tania that he liked her. This was the night before the SWEN433 exam. </p>
         </div>
       </li>
       <li>
         <div>
-          <time> 11 December 2014 </time> Iain and Tania graduated from university.
+          <time>28 November 2013</time> 
+          <p>Iain asked Tania out. He set the first date to be at One Red Dog so Tania waited there for him. Unfortunately Iain got muddled up with restaurant names and meant Big Dogs on Blair. They were both sitting at different restaurants waiting for each other until Iain told Tania he meant the date to be at Big Dogs.</p>
         </div>
       </li>
       <li>
         <div>
-          <time>27 April 2016</time> Iain popped the question to Tania in Oriental Bay after all you can eat chicken wings.
+          <time> 11 December 2014 </time> 
+          <p> Iain and Tania graduated from university.</p>
         </div>
       </li>
       <li>
         <div>
-          <time>25 June 2016</time> Iain and Tania's Formal Betrothal Ceremony at Sts Peters and Pauls Church, Lower Hutt. This was followed by the engagement party at Royal Port Nicholson Yacht Club, Oriental Bay.
+          <time>27 April 2016</time> 
+          <p>Iain popped the question to Tania in Oriental Bay after all you can eat chicken wings.</p>
         </div>
       </li>
       <li>
         <div>
-          <time>25 February 2017</time> Iain and Tania are getting married in Lower Hutt.
+          <time>25 June 2016</time> 
+          <p>Iain and Tania's Formal Betrothal Ceremony at Sts Peters and Pauls Church, Lower Hutt. This was followed by the engagement party at Royal Port Nicholson Yacht Club, Oriental Bay.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>25 February 2017</time> 
+          <p>Iain and Tania are getting married in Lower Hutt.</p>
         </div>
       </li>
     </ul>
