Fix the story to our story and fix css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,3 +305,12 @@ body {
     border-color: transparent #F45B69 transparent transparent;
   }
 }
+
+time {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.para-text {
+  color: $white;
+}
