--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -7,43 +7,43 @@
     <ul>
       <li>
         <div>
-          <time> March 2010 </time>
-          <p> Iain and Tania met at ENGR101 Labs and were assigned to the same lab group. </p></div>
+          <time> 11 MARCH 2010 </time>
+          <p class='para-text'> Iain and Tania met at ENGR101 Labs. </p></div>
       </li>
       <li>
         <div>
-          <time> 6 November 2013 </time> 
-          <p>Iain told Tania that he liked her. This was the night before the SWEN433 exam. </p>
+          <time> 6 NOVEMBER 2013 </time> 
+          <p class='para-text'>Iain told Tania that he liked her. This was the night before the SWEN433 exam. </p>
         </div>
       </li>
       <li>
         <div>
-          <time>28 November 2013</time> 
-          <p>Iain asked Tania out. He set the first date to be at One Red Dog so Tania waited there for him. Unfortunately Iain got muddled up with restaurant names and meant Big Dogs on Blair. They were both sitting at different restaurants waiting for each other until Iain told Tania he meant the date to be at Big Dogs.</p>
+          <time>28 NOVEMBER 2013</time> 
+          <p class='para-text'>Iain asked Tania out. He set the first date to be at One Red Dog so Tania waited there for him. Unfortunately Iain got muddled up with restaurant names and meant Big Dogs on Blair. They were both sitting at different restaurants waiting for each other until Iain told Tania he meant the date to be at Big Dogs.</p>
         </div>
       </li>
       <li>
         <div>
-          <time> 11 December 2014 </time> 
-          <p> Iain and Tania graduated from university.</p>
+          <time> 11 DECEMBER 2014 </time> 
+          <p class='para-text'> Iain and Tania graduated from university.</p>
         </div>
       </li>
       <li>
         <div>
-          <time>27 April 2016</time> 
-          <p>Iain popped the question to Tania in Oriental Bay after all you can eat chicken wings.</p>
+          <time>27 APRIL 2016</time> 
+          <p class='para-text'>Iain popped the question to Tania in Oriental Bay after all you can eat chicken wings.</p>
         </div>
       </li>
       <li>
         <div>
-          <time>25 June 2016</time> 
-          <p>Iain and Tania's Formal Betrothal Ceremony at Sts Peters and Pauls Church, Lower Hutt. This was followed by the engagement party at Royal Port Nicholson Yacht Club, Oriental Bay.</p>
+          <time>25 JUNE 2016</time> 
+          <p class='para-text'>Iain and Tania's Formal Betrothal Ceremony at Sts Peters and Pauls Church, Lower Hutt. This was followed by the engagement party at Royal Port Nicholson Yacht Club, Oriental Bay.</p>
         </div>
       </li>
       <li>
         <div>
-          <time>25 February 2017</time> 
-          <p>Iain and Tania are getting married in Lower Hutt.</p>
+          <time>25 FEBRUARY 2017</time> 
+          <p class='para-text'>Iain and Tania are getting married in Lower Hutt.</p>
         </div>
       </li>
     </ul>
