--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'hvr-sweep-to-right' %></li>
         <% else %>
           <li><%= link_to 'Home', welcome_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'The Story', our_story_path, class: 'hvr-sweep-to-right our-story-button'%></li>
+          <li><%= link_to 'Our Story', our_story_path, class: 'hvr-sweep-to-right our-story-button'%></li>
           <li><%= link_to 'People', people_path, class: 'hvr-sweep-to-right'%></li>
           <li><%= link_to 'The Wedding', the_details_path, class: 'hvr-sweep-to-right'%></li>
           <li><%= link_to 'Accomodation', accomodation_path, class: 'hvr-sweep-to-right'%></li>
