--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -4,7 +4,7 @@
   <div class='row'>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("angus-inn.jpg", :alt => "angus-inn", height: '250', width: '358') %>
+        <%= image_tag("angus-inn.jpg", :alt => "angus-inn", width: '100%', height: '250') %>
         <div class="description">
           <h2 class='subheading'><%= link_to 'Angus Inn', 'http://www.angusinn.co.nz/accommodation', class: 'subheading' %></h2>
           <span class="rating">
@@ -14,12 +14,11 @@
         <p> Corner of Cornwall Streets & Waterloo Road </p>
         <p> Lower Hutt </p>
         <p> +64 4 560 1100 </p>
-        <p> accommodation@angusinn.co.nz </p>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: '358', height: '250') %>
+        <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: '100%', height: '250') %>
         <div class="description">
           <h2 class='subheading'><%= link_to 'Boulcott Lodge Inn', 'http://www.boulcottlodge.co.nz/accommodation.html', class: 'subheading' %></h2>
           <span class="rating">
@@ -30,12 +29,11 @@
         <p> Lower Hutt </p>
         <p> 0800 782 928 25 </p>
         <p> +64 4 58 615 58 </p>
-        <p> stay@boulcottlodge.co.nz </p>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("green-gables.jpg", :alt => "green-gables", width: '358', height: '250') %>
+        <%= image_tag("green-gables.jpg", :alt => "green-gables", width: '100%', height: '250') %>
         <div class="description">
           <h2 class='subheading'><%= link_to 'Green Gables Motel', 'http://greengablesmotel.co.nz/rooms', class: 'subheading' %></h2>
           <span class="rating">
@@ -45,7 +43,6 @@
         <p> 560 High Street </p>
         <p> Lower Hutt </p>
         <p> +64 4 569 3596 </p>
-        <p> stay@greengablesmotel.co.nz </p>
       </div>
     </div>
   </div>
