Fix the details page with updated content

--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -5,7 +5,7 @@
     <div class="your-clock"></div>
   </div>
   <div class='row'>
-    <div class="col-md-4 col-sm-4 col-xs-12">
+    <div class="col-md-6 col-sm-6">
       <div class="event-item">
         <h2 class='subheading'>Ceremony</h2>
         <span>14:30 - 15:30</span>
@@ -14,10 +14,10 @@
         <p> Lower Hutt </p>
         <p> Wellington </p>
         <p> New Zealand </p>      
-        <%= image_tag("church.jpg", :alt => "church", height: '250', width: '338') %>
+        <%= image_tag("church.jpg", :alt => "church", width: '100%', height: '250' ) %>
       </div>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-12">
+    <div class="col-md-6 col-sm-6">
       <div class="event-item">
         <h2 class='subheading'>Formal Reception</h2>
         <span>17:30 - 22.00</span>
@@ -26,20 +26,7 @@
         <p> Lower Hutt </p>
         <p> Wellington </p>
         <p> New Zealand </p>      
-        <%= image_tag("reception.jpg", :alt => "reception", height: '250', width: '338') %>
+        <%= image_tag("reception.jpg", :alt => "reception", width: '100%', height: '250') %>
       </div>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-12">
-      <div class="event-item">
-        <h2 class='subheading'>Party</h2>
-        <span>22:00 - 12.00</span>
-        <p> Boulcott Farm</p>
-        <p> 30 Military Road </p>
-        <p> Lower Hutt </p>
-        <p> Wellington </p>
-        <p> New Zealand </p>      
-        <%= image_tag("dance.jpg", :alt => "dance", height: '250', width: '338') %>
-      </div>
-    </div>
-  </div>
 </div>
