--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,20 +11,20 @@
     <div class="collapse navbar-collapse" id="navbar-collapsable">
       <ul class="nav navbar-nav foo pull-right" id="menu">
         <% if current_user %>
-          <li><%= link_to 'Rsvp', rsvps_path, class: 'hvr-sweep-to-right' %></li>
-          <li><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'Gifts', gifts_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'Claimed Gifts', cgs_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(rsvps_path) %>><%= link_to 'Rsvp', rsvps_path, class: 'hvr-sweep-to-right' %></li>
+          <li class=<%= 'active' if current_page?(guests_path) %>><%= link_to 'Guests', guests_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(gifts_path) %>><%= link_to 'Gifts', gifts_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(cgs_path) %>><%= link_to 'Claimed Gifts', cgs_path, class: 'hvr-sweep-to-right'%></li>
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'hvr-sweep-to-right' %></li>
         <% else %>
-          <li><%= link_to 'Home', welcome_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'Our Story', our_story_path, class: 'hvr-sweep-to-right our-story-button'%></li>
-          <li><%= link_to 'People', people_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'The Wedding', the_details_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'Accomodation', accomodation_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'Gifts', gifts_path, class: 'hvr-sweep-to-right'%></li>
-          <li><%= link_to 'Rsvp', new_rsvp_path, class: 'hvr-sweep-to-right' if !current_user %></li>
-          <li><%= link_to 'Contact', contact_us_path, class: 'hvr-sweep-to-right' %></li>
+          <li class=<%= 'active' if current_page?(welcome_path) %>><%= link_to 'Home', welcome_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(our_story_path) %>><%= link_to 'Our Story', our_story_path, class: 'hvr-sweep-to-right our-story-button'%></li>
+          <li class=<%= 'active' if current_page?(people_path) %>><%= link_to 'People', people_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(the_details_path) %>><%= link_to 'The Wedding', the_details_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(accomodation_path) %>><%= link_to 'Accomodation', accomodation_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(gifts_path) %>><%= link_to 'Gifts', gifts_path, class: 'hvr-sweep-to-right'%></li>
+          <li class=<%= 'active' if current_page?(new_rsvp_path) %>><%= link_to 'Rsvp', new_rsvp_path, class: 'hvr-sweep-to-right' if !current_user %></li>
+          <li class=<%= 'active' if current_page?(contact_us_path) %>><%= link_to 'Contact', contact_us_path, class: 'hvr-sweep-to-right' %></li>
         <% end %>
       </ul>
    </div>
