Change formal reception to be reception

--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="col-md-6 col-sm-6">
       <div class="event-item">
-        <h2 class='subheading'>Formal Reception</h2>
+        <h2 class='subheading'> Reception</h2>
         <span>17:30 - 22.00</span>
         <p> Boulcott Farm</p>
         <p> 30 Military Road </p>
