Update text in our story page

--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -8,7 +8,7 @@
       <li>
         <div>
           <time> 11 MARCH 2010 </time>
-          <p class='para-text'> Iain and Tania met at ENGR101 Labs. </p></div>
+          <p class='para-text'> Iain and Tania met at ENGR101 Labs after being place in the same lab group. </p></div>
       </li>
       <li>
         <div>
@@ -37,13 +37,13 @@
       <li>
         <div>
           <time>25 JUNE 2016</time> 
-          <p class='para-text'>Iain and Tania's Formal Betrothal Ceremony at Sts Peters and Pauls Church, Lower Hutt. This was followed by the engagement party at Royal Port Nicholson Yacht Club, Oriental Bay.</p>
+          <p class='para-text'>Iain and Tania had their Formal Betrothal Ceremony at Sts Peters and Pauls Church, Lower Hutt. This was followed by the engagement party at Royal Port Nicholson Yacht Club, Oriental Bay.</p>
         </div>
       </li>
       <li>
         <div>
           <time>25 FEBRUARY 2017</time> 
-          <p class='para-text'>Iain and Tania are getting married in Lower Hutt.</p>
+          <p class='para-text'>Iain and Tania are getting married in Lower Hutt at Sts Peter and Pauls Church, Lower Hutt. Their wedding reception will be at Boulcott Farm, Lower Hutt. </p>
         </div>
       </li>
     </ul>
