Fix accomodation page styling

--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -5,44 +5,33 @@
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
         <%= image_tag("angus-inn.jpg", :alt => "angus-inn", width: '100%', height: '250') %>
-        <div class="description">
           <h2 class='subheading'><%= link_to 'Angus Inn', 'http://www.angusinn.co.nz/accommodation', class: 'subheading' %></h2>
           <span class="rating">
             <i class="fa fa-star rating"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
-        </div>
-        <p> Corner of Cornwall Streets & Waterloo Road </p>
-        <p> Lower Hutt </p>
-        <p> +64 4 560 1100 </p>
+          <p> Corner of Cornwall Streets & Waterloo Road, Lower Hutt </p>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
         <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: '100%', height: '250') %>
-        <div class="description">
           <h2 class='subheading'><%= link_to 'Boulcott Lodge Inn', 'http://www.boulcottlodge.co.nz/accommodation.html', class: 'subheading' %></h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
-        </div>
-        <p> 615 High Street, Boulcott </p>
-        <p> Lower Hutt </p>
-        <p> 0800 782 928 25 </p>
-        <p> +64 4 58 615 58 </p>
+          <p> 615 High Street </p>
+          <p> Lower Hutt </p>
       </div>
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
         <%= image_tag("green-gables.jpg", :alt => "green-gables", width: '100%', height: '250') %>
-        <div class="description">
           <h2 class='subheading'><%= link_to 'Green Gables Motel', 'http://greengablesmotel.co.nz/rooms', class: 'subheading' %></h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
-        </div>
-        <p> 560 High Street </p>
-        <p> Lower Hutt </p>
-        <p> +64 4 569 3596 </p>
+          <p> 560 High Street
+          <p> Lower Hutt </p>
       </div>
     </div>
   </div>
