--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -2,41 +2,41 @@
   <h2 align='center'>Groomsmen</h2>
   <div class="hr"></div>
   <div class="row">
-    <div class="col-md-3 col-sm-4">
+    <div class="col-md-3 col-md-2">
       <a href="../images/connor.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-        <img src="../images/connor.jpg" alt="Connor Scott", width='207', height='150'>
+         <%= image_tag("connor.jpg", :alt => "Connor Scott", width: '100%', height: '100%', class:'image-size') %>
         <div class="description">
           <h3>Connor Scott </h3>
         </div>
       </a>
     </div>
-    <div class="col-md-3 col-sm-4">
+    <div class="col-md-3 col-md-2">
       <a href="../images/eddie.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-        <img src="../images/eddie.jpg" alt="Eddie Stevens", width='207', height='150'>
+         <%= image_tag("eddie.jpg", :alt => "Eddie Stevens", width: '100%', height: '100%', class:'image-size') %>
         <div class="description">
           <h3>Eddie Stevens</h3>
         </div>
       </a>
     </div>
-      <div class="col-md-3 col-sm-4">
+      <div class="col-md-3 col-md-2">
         <a href="../images/farshid.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/farshid.jpg" alt="Farshid Shokoohi", width='207', height='150'>
+         <%= image_tag("farshid.jpg", :alt => "Farshid Shokoohi", width: '100%', height: '100%', class:'image-size') %>
           <div class="description">
             <h3>Farshid Shokoohi </h3>
           </div>
         </a>
       </div>
-    <div class="col-md-3 col-sm-4">
+    <div class="col-md-3 col-md-2">
       <a href="../images/matt.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-        <img src="../images/matt.jpg" alt="Matt van der Welden", width='207', height='150'>
+         <%= image_tag("matt.jpg", :alt => "Matt van der Velden", width: '100%', height: '100%', class:'image-size') %>
         <div class="description">
           <h3>Matt Van der Velden </h3>
         </div>
       </a>
     </div>
-    <div class="col-md-3 col-sm-4">
+    <div class="col-md-3 col-md-2">
       <a href="../images/mike.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-        <img src="../images/mike.jpg" alt="Michael Barrell", width='207', height='150'>
+         <%= image_tag("mike.jpg", :alt => "Michael Barrell", width: '100%', height: '100%', class:'image-size') %>
         <div class="description">
           <h3>Michael Barrell</h3>
         </div>
