--- a/app/views/pages/_wedding_party.html.erb
+++ b/app/views/pages/_wedding_party.html.erb
@@ -3,45 +3,45 @@
     <h2 align='center'>Wedding Party</h2>
     <div class="hr"></div>
     <div class="row">
-      <div class="col-md-3 col-sm-4">
+      <div class="col-md-3 col-md-2">
         <a href="../images/anita.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/anita.jpg" alt="Anita Jacob", width='207', height='150'>
+         <%= image_tag("anita.jpg", :alt => "Anita Jacob", width: '100%', height: '100%', class:'image-size') %>
           <div class="description">
             <h3>Anita Jacob </h3>
             <span>Maid of Honour</span>
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-4">
+      <div class="col-md-3 col-md-2">
         <a href="../images/annie.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/annie.jpg" alt="Annie Jacob", width='207', height='150'>
+         <%= image_tag("annie.jpg", :alt => "Annie Jacob", width: '100%', height: '100%', class:'image-size') %>
           <div class="description">
             <h3>Annie Jacob</h3>
             <span>Flower Girl</span>
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-4">
+      <div class="col-md-3 col-md-2">
         <a href="../images/fraser.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/fraser.jpg" alt="Fraser Berry", width='207', height='150'>
+         <%= image_tag("fraser.jpg", :alt => "Fraser Berry", width: '100%', height: '100%', class:'image-size') %>
           <div class="description">
             <h3>Fraser Berry</h3>
               <span>Best Man</span>
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-4">
+      <div class="col-md-3 col-md-2">
         <a href="../images/john.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/john.jpg" alt="John Tharakan", width='207', height='150'>
+         <%= image_tag("john.jpg", :alt => "John Tharakan", width: '100%', height: '100%', class:'image-size') %>
           <div class="description">
             <h3>John Tharakan</h3>
             <span>Ring Bearer</span>
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-4">
+      <div class="col-md-3 col-md-2">
         <a href="../images/nina.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/nina.jpg" alt="Nina Jacob", width='207', height='150'>
+         <%= image_tag("nina.jpg", :alt => "Nina Jacob", width: '100%', height: '100%', class:'image-size') %>
           <div class="description">
             <h3>Nina Jacob </h3>
             <span>Flower Girl</span>
