Update rsvp confirmation emails content

--- a/app/views/admin_mailer/rsvp_confirmation.text.erb
+++ b/app/views/admin_mailer/rsvp_confirmation.text.erb
@@ -5,7 +5,7 @@ A new RSVP has been created:
 Guest Name: <%= @guest.full_name %>
 Attending: <%= @rsvp.attending %>
 <% if @rsvp.attending == 'Yes'%>
-Main Meal Preference: <%=@rsvp.main_meal_preference %>
+Mains Preference: <%=@rsvp.main_meal_preference %>
 Dessert Preference: <%=@rsvp.dessert_preference %>
 <% if @rsvp.dietary_requirements != """" %>
 Dietary Requirements: <%= @rsvp.dietary_requirements %>
